# respiragator

./: .gitignore  Cargo.toml  README.md  data1.csv  justfile  main.py  pyproject.toml
app/: Cargo.toml
app/src/: bluefruit.rs  gui.rs  lib.rs  main.rs  ringbuffer.rs
scripts/: boot.py  transfer.py
